xLib6000 V3 Change Log

v2.5.1.2019_08_07

xLib6000 scheme - unchecked "allow debugging when using document versions browser"


v2.5.1.2019_08_01

Discovery.swift - renamed updateAvailableRadios() to updateDiscoveredRadios()


v2.5.1.2019_07_30

Turned off code signing
Api.swift - corrected clientGui case for NOT isGui in setupCommands(_:)
Api.swift - corrected issue where "client ip" command sent twice
Api.swift - corrected clientGui case to not use a replyHandler
Radio.swift - corrected findGuiClientByHandle(_:)
Notifications.swift - renamed "radiosAvailable" to "discoveredRadios"
RadioFactory.swift - rename file & class to Discovery
Discovery.swift - converted Discovery class to a Singleton
Api.swift - removed discoveredRadios var (use Discovery singleton)
Api.swift - added initialization of Discovery in init()
RadioCommands.swift - added sending of "client bind client_id=\(clientId)" on boundClientId
GuiClient.swift - changed clientId var from UUID? to String?
AppExtensions.swift - in struct Version added isV3M (V3 with Multiflex)


v2.5.1.2019_07_25

AppExtensions.swift - refactored isForThisClient(_:) to parse properties looking for the client handle
All Streams - modified to use changed isForThisClient(_:)
RadioFactory.swift - changed == for DiscoveredRadio to include model
Various - removed static command definitions, replaced with literal strings
Vita.swift - removed GuiClient class
GuiClient.swift - added
Profile.swift - added check for correct profile type in class parseStatus(_:radio:queue:inUse:)


v2.5.1.2019_07_17

RadioFactory.swift - removed debug print statement
Radio.swift - in parseStatus(_:) added remote_audio_rx and tx cases (not fully implemented)
Radio.swift - in parseStatus(_:) replaced fatalError() with _log.msg(....)
Opus.swift - removed
OpusCommands.swift - removed
RemoteRxAudioStream.swift - added
RemoteRxAudioStreamCommands.swift - added
RemoteTxAudioStream.swift - added
RemoteTxAudioStreamCommands.swift - added